# bitcoin-musig2-wallet

./: Cargo.toml  README.md
docs/: NETWORK_MODULE.md
poc/: musig1.rs  musig2.rs
src/: config.rs  error.rs  main.rs
src/cli/: coordinator.rs  signer.rs
src/crypto/: mod.rs  musig2.rs
src/musig2/: coordinator.rs  keys.rs  mod.rs  session.rs  signer.rs
src/network/: discovery.rs  error.rs  message.rs  message_handler.rs  mod.rs  peer.rs  service.rs  transport.rs
src/signing/: events.rs  mod.rs  state.rs
