[package]
name = "bitcoin-musig2-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
anyhow = "1.0.97"
bitcoin = "0.32.5"
secp256k1 = { version = "0.29.1", features = ["rand-std", "rand"] }
secp256k1-zkp = "0.11.0"
rand = "0.8.5"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full", "sync", "process", "io-util"] }
bincode = "2.0.1"
rand_core = "0.9.3"
hex = "0.4.3"
async-trait = "0.1.88"
log = "0.4.27"
