[package]
name = "bitcoin-musig2-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
anyhow = "1.0.97"
bitcoin = "0.32.5"
secp256k1 = { version = "0.29.1", features = ["rand-std", "rand"] }
secp256k1-zkp = { version = "0.11.0", features = ["serde"] }
rand = "0.8.5"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full", "sync", "process", "io-util"] }
bincode = { version = "2.0.1", features = ["serde"] }
rand_core = "0.9.3"
hex = "0.4.3"
async-trait = "0.1.88"
log = "0.4.27"
futures = "0.3.31"
sha2 = "0.11.0-pre.5"
nostr-sdk = "0.40.0"
nostr = "0.40.0"
musig2 = "0.2.4"
thiserror = "2.0.12"
config = "0.15.11"
env_logger = "0.11.7"
zeroize = "1.8.1"
clap = { version = "4.5.32", features = ["derive"] }
